First cut of scatter plot tapping to update stream.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180807 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180807 Trench segmentation.ipynb
@@ -27,9 +27,9 @@
     "import streamz\n",
     "import streamz.dataframe as sdf\n",
     "import holoviews as hv\n",
-    "from holoviews.streams import Stream, param\n",
+    "from holoviews.streams import Stream, param, Selection1D\n",
     "from holoviews.operation.datashader import regrid\n",
-    "from bokeh.models.tools import HoverTool\n",
+    "from bokeh.models.tools import HoverTool, TapTool\n",
     "import matplotlib.pyplot as plt\n",
     "import qgrid\n",
     "import ipywidgets as widgets\n",
@@ -600,15 +600,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tp.head(10)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -900,7 +891,7 @@
    "source": [
     "%%time\n",
     "framewise_df = pq.read_pandas(\n",
-    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis3_ac_0.parquet\"\n",
+    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis50_full_0.parquet\"\n",
     ").to_pandas()"
    ]
   },
@@ -912,7 +903,7 @@
    "source": [
     "%%time\n",
     "trenchwise_df = pq.read_pandas(\n",
-    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis3_ac_1.parquet\"\n",
+    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis50_full_1.parquet\"\n",
     ").to_pandas()"
    ]
   },
@@ -924,8 +915,17 @@
    "source": [
     "%%time\n",
     "labelwise_df = pq.read_pandas(\n",
-    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis3_ac_2.parquet\"\n",
+    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis50_full_2.parquet\"\n",
     ").to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labelwise_df.info(memory_usage=\"deep\")"
    ]
   },
   {
@@ -1077,7 +1077,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d.hvplot.scatter(\"t\", \"YFP_labelwise_p0.95\")"
+    "d.hvplot.scatter(\"t\", \"YFP_labelwise_p0.95\", by=\"trench\")"
    ]
   },
   {
@@ -1196,6 +1196,66 @@
     "m = pd.melt(d.loc[:, cols])\n",
     "# m.index = d.index\n",
     "# m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plot tapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LabelStream = ui.MultiIndexStream.define(\"LabelStream\", labelwise_df.index)\n",
+    "label_stream = LabelStream()\n",
+    "box = ui.dataframe_browser(label_stream)\n",
+    "label_stream.event()\n",
+    "box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = d.hvplot.scatter(\"t\", \"YFP_labelwise_p0.95\").opts(\n",
+    "    {\"Scatter\": dict(plot={\"tools\": [\"tap\", \"hover\"]})}\n",
+    ")\n",
+    "ui.selection_to_stream(p, label_stream)\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.index[selection.index[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_stream.contents.keys()"
    ]
   },
   {
