First cut of updating a scatter plot in response to a stream.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180807 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180807 Trench segmentation.ipynb
@@ -1224,11 +1224,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = d.hvplot.scatter(\"t\", \"YFP_labelwise_p0.95\").opts(\n",
-    "    {\"Scatter\": dict(plot={\"tools\": [\"tap\", \"hover\"]})}\n",
-    ")\n",
+    "p = d.hvplot.scatter(\"t\", \"YFP_labelwise_p0.95\").options(tools=[\"tap\", \"hover\"])\n",
     "ui.selection_to_stream(p, label_stream)\n",
     "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cb(**kwargs):\n",
+    "    dat = labelwise_df.loc[\n",
+    "        workflow.stream_slice(\n",
+    "            labelwise_df.index.names, kwargs, t=slice(None), label=slice(None)\n",
+    "        ),\n",
+    "        :,\n",
+    "    ]\n",
+    "    plot = dat.hvplot.scatter(\"t\", \"YFP_labelwise_p0.95\").options(\n",
+    "        tools=[\"tap\", \"hover\"]\n",
+    "    )\n",
+    "    # ui.selection_to_stream(plot, label_stream)\n",
+    "    return plot\n",
+    "\n",
+    "\n",
+    "ui.viewer(cb, label_stream)"
    ]
   },
   {
