WIP streaming gather.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180807 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180807 Trench segmentation.ipynb
@@ -230,6 +230,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def _check():\n",
+    "    import os\n",
+    "\n",
+    "    return os.path.exists(\n",
+    "        \"/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2\"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "client.run(_check)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def do_reload():\n",
     "    from importlib import reload\n",
     "    import util, trench_detection, diagnostics, workflow, image\n",
@@ -685,12 +702,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "analysis_res = []"
+    "## New collect"
    ]
   },
   {
@@ -699,20 +714,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def collect_results():\n",
-    "    ac = distributed.as_completed(analysis_futures, with_results=True)\n",
-    "    async for future, dfs in ac:\n",
-    "        analysis_res.append(dfs)\n",
-    "        # await client.cancel(future, asynchronous=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = asyncio.get_event_loop().create_task(collect_results())"
+    "async def gather_stream(futures):\n",
+    "    ac = distributed.as_completed(futures, with_results=False)\n",
+    "    async for future in ac:\n",
+    "        await source.emit(future)\n",
+    "\n",
+    "\n",
+    "def gather_and_cancel(futures):\n",
+    "    results = client.gather(futures)\n",
+    "    client.cancel(futures)\n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "source = streamz.Stream(asynchronous=True)\n",
+    "analysis_res = []\n",
+    "# source.timed_window(10).map(gather_and_cancel).sink(analysis_res.extend)\n",
+    "source.timed_window(0.5).map(gather_and_cancel).sink(analysis_res.extend)\n",
+    "t = asyncio.get_event_loop().create_task(gather_stream(analysis_futures))"
    ]
   },
   {
@@ -722,6 +740,45 @@
    "outputs": [],
    "source": [
     "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(analysis_res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Old collect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def collect_results():\n",
+    "    ac = distributed.as_completed(analysis_futures, with_results=False)\n",
+    "    async for future in ac:\n",
+    "        dfs = future.result()\n",
+    "        analysis_res.append(dfs)\n",
+    "        await client.cancel(future, asynchronous=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = asyncio.get_event_loop().create_task(collect_results())"
    ]
   },
   {
@@ -1253,33 +1310,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d.index[selection.index[0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "label_stream.contents.keys()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1429,6 +1459,56 @@
     "box = ui.dataframe_browser(label_stream)\n",
     "label_stream.event()\n",
     "box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_stream.contents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%opts Layout [normalize=False]\n",
+    "%%opts Image [width=500 height=300]\n",
+    "# image_callback = partial(ui.get_trench_set_overlay, get_frame_func=workflow.get_nd2_frame_cached)\n",
+    "# p = ui.trench_set_viewer(trench_bboxes_t0, label_stream, channel='MCHERRY', image_callback=image_callback).options({'Bounds': dict(tools=['tap'])})\n",
+    "p = ui.get_trench_set_overlay(\n",
+    "    trench_bboxes_t0,\n",
+    "    channel=\"MCHERRY\",\n",
+    "    **{\n",
+    "        k: label_stream.contents[k]\n",
+    "        for k in (\"filename\", \"position\", \"t\", \"trench_set\", \"trench\")\n",
+    "    },\n",
+    ")\n",
+    "p = p.options({\"Bounds\": dict(tools=[\"tap\"])})\n",
+    "s = Selection1D(source=p)\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s"
    ]
   },
   {
