WIP streaming gather to arrow.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180807 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180807 Trench segmentation.ipynb
@@ -135,7 +135,7 @@
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # interface='ib0',\n",
-    "    memory=\"1.5GB\",\n",
+    "    memory=\"8GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    cores=4,\n",
     "    processes=1,\n",
@@ -172,6 +172,15 @@
    "outputs": [],
    "source": [
     "cluster.stop_jobs(cluster.running_jobs.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster.scheduler.stop_services()"
    ]
   },
   {
@@ -702,6 +711,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.cancel(analysis_futures)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -720,17 +738,97 @@
     "        await source.emit(future)\n",
     "\n",
     "\n",
-    "def gather_and_cancel(futures):\n",
+    "def gather_and_cancel(futures, cancel=True):\n",
     "    results = client.gather(futures)\n",
-    "    client.cancel(futures)\n",
+    "    if cancel:\n",
+    "        client.cancel(futures)\n",
     "    return results\n",
     "\n",
     "\n",
     "source = streamz.Stream(asynchronous=True)\n",
-    "analysis_res = []\n",
-    "# source.timed_window(10).map(gather_and_cancel).sink(analysis_res.extend)\n",
-    "source.timed_window(0.5).map(gather_and_cancel).sink(analysis_res.extend)\n",
+    "# analysis_res = []\n",
+    "# source.timed_window(1).map(gather_and_cancel).sink(analysis_res.extend)\n",
+    "stream_sinks = {}\n",
+    "stream_writers = {}\n",
+    "\n",
+    "\n",
+    "def pandas_to_arrow(dfs, sinks, writers):\n",
+    "    for i, df in enumerate(dfs):\n",
+    "        batch = pa.RecordBatch.from_pandas(df)\n",
+    "        if i not in writers:\n",
+    "            sinks[i] = pa.BufferOutputStream()\n",
+    "            writers[i] = pa.RecordBatchStreamWriter(sinks[i], batch.schema)\n",
+    "        writers[i].write_batch(batch)\n",
+    "\n",
+    "\n",
+    "source.timed_window(1).map(partial(gather_and_cancel, cancel=False)).flatten().sink(\n",
+    "    partial(pandas_to_arrow, sinks=stream_sinks, writers=stream_writers)\n",
+    ")\n",
     "t = asyncio.get_event_loop().create_task(gather_stream(analysis_futures))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stream_sinks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stream_writers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = stream_sinks[0].getvalue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = stream_sinks[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = a.get_result()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "pa.open_stream(stream_sinks[2].get_result()).read_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.cancel()"
    ]
   },
   {
@@ -749,54 +847,6 @@
    "outputs": [],
    "source": [
     "len(analysis_res)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Old collect"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "async def collect_results():\n",
-    "    ac = distributed.as_completed(analysis_futures, with_results=False)\n",
-    "    async for future in ac:\n",
-    "        dfs = future.result()\n",
-    "        analysis_res.append(dfs)\n",
-    "        await client.cancel(future, asynchronous=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = asyncio.get_event_loop().create_task(collect_results())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.cancel(analysis_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "progress(analysis_futures)"
    ]
   },
   {
@@ -857,51 +907,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "analysis_res = util.apply_map_futures(\n",
-    "    client.gather, analysis_futures, predicate=lambda x: x.status == \"finished\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "framewise_df, trenchwise_df, labelwise_df = workflow.concat_unzip_dataframes(\n",
-    "    analysis_res\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "pq.write_table(\n",
-    "    pa.Table.from_pandas(framewise_df),\n",
-    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis50_full_0.parquet\",\n",
-    ")\n",
-    "pq.write_table(\n",
-    "    pa.Table.from_pandas(trenchwise_df),\n",
-    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis50_full_1.parquet\",\n",
-    ")\n",
-    "pq.write_table(\n",
-    "    pa.Table.from_pandas(labelwise_df),\n",
-    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis50_full_2.parquet\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "len(labelwise_df)"
    ]
   },
@@ -912,18 +917,6 @@
    "outputs": [],
    "source": [
     "labelwise_df.info(memory_usage=\"deep\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "a = pq.read_pandas(\n",
-    "    \"/n/scratch2/jqs1/fidelity/all/output/analysis50_full_2.parquet\"\n",
-    ").to_pandas()"
    ]
   },
   {
