WIP streaming gather.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180807 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180807 Trench segmentation.ipynb
@@ -131,11 +131,12 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"01:00:00\",\n",
+    "    walltime=\"06:00:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
+    "    job_extra=[\"--exclude=compute-e-16-181,compute-e-16-186\"],\n",
     "    # interface='ib0',\n",
-    "    memory=\"8GB\",\n",
+    "    memory=\"3GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    cores=4,\n",
     "    processes=1,\n",
@@ -180,7 +181,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scheduler.stop_services()"
+    "cluster.scheduler.stop_services()\n",
+    "cluster.scheduler.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del cluster"
    ]
   },
   {
@@ -247,7 +258,7 @@
     "    )\n",
     "\n",
     "\n",
-    "client.run(_check)"
+    "[k for k, v in client.run(_check).items() if v is False]"
    ]
   },
   {
@@ -659,7 +670,7 @@
    "outputs": [],
    "source": [
     "# frames_to_analyze = all_frames.loc[IDX[:,:1,['MCHERRY','YFP'],1:5],:]\n",
-    "frames_to_analyze = all_frames.loc[IDX[:, :1, [\"MCHERRY\", \"YFP\"], :], :]"
+    "frames_to_analyze = all_frames.loc[IDX[:, :, [\"MCHERRY\", \"YFP\"], :], :]"
    ]
   },
   {
@@ -697,7 +708,7 @@
     "    framewise_funcs=framewise_funcs,\n",
     "    trenchwise_funcs=trenchwise_funcs,\n",
     "    labelwise_funcs=labelwise_funcs,\n",
-    "    regionprops=True,\n",
+    "    regionprops=False,\n",
     "    segment_func=trench_segmentation.watershed.segment_trench,\n",
     ")\n",
     "\n",
@@ -761,7 +772,7 @@
     "        writers[i].write_batch(batch)\n",
     "\n",
     "\n",
-    "source.timed_window(1).map(partial(gather_and_cancel, cancel=False)).flatten().sink(\n",
+    "source.timed_window(1).map(partial(gather_and_cancel, cancel=True)).flatten().sink(\n",
     "    partial(pandas_to_arrow, sinks=stream_sinks, writers=stream_writers)\n",
     ")\n",
     "t = asyncio.get_event_loop().create_task(gather_stream(analysis_futures))"
@@ -773,7 +784,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stream_sinks"
+    "t"
    ]
   },
   {
@@ -791,25 +802,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = stream_sinks[0].getvalue()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = stream_sinks[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = a.get_result()"
+    "# started 8pm sharp"
    ]
   },
   {
@@ -819,7 +812,32 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "pa.open_stream(stream_sinks[2].get_result()).read_pandas()"
+    "for i, sink in stream_sinks.items():\n",
+    "    out = pa.OSFile(\n",
+    "        \"/n/scratch2/jqs1/fidelity/all/output/analysis_all_stream_{}.arrow\".format(i),\n",
+    "        \"w\",\n",
+    "    )\n",
+    "    out.write(sink.get_result())\n",
+    "    out.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "pa.open_stream(stream_sinks[0].get_result()).read_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pa.MemoryMappedFile(, 'w')"
    ]
   },
   {
@@ -858,47 +876,6 @@
     "util.apply_map_futures(\n",
     "    client.gather, analysis_futures, predicate=lambda x: x.status == \"error\"\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "ac = distributed.as_completed(analysis_futures, with_results=True)\n",
-    "writers = {}\n",
-    "for future, dfs in ac:\n",
-    "    # for future in analysis_futures:\n",
-    "    #    dfs = client.gather(future)\n",
-    "    # for dfs in analysis_res:\n",
-    "    try:\n",
-    "        tables = [pa.Table.from_pandas(df) for df in dfs]\n",
-    "        for i in range(len(tables)):\n",
-    "            if i not in writers:\n",
-    "                writers[i] = pq.ParquetWriter(\n",
-    "                    \"/n/scratch2/jqs1/fidelity/all/output/analysis3t_ac_{}.parquet\".format(\n",
-    "                        i\n",
-    "                    ),\n",
-    "                    tables[i].schema,\n",
-    "                )\n",
-    "            writers[i].write_table(tables[i])\n",
-    "        client.cancel(future)\n",
-    "    except Exception as e:\n",
-    "        print(\"ERROR\", e)\n",
-    "for writer in writers.values():\n",
-    "    writer.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for writer in writers.values():\n",
-    "    writer.close()"
    ]
   },
   {
